--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "npm run typeorm migration:run -- -d ./typeorm.config.ts",
-    "migration:generate": "npm run typeorm -- -d ./typeorm.config.ts migration:generate ./src/migrations/$npm_config_name",
-    "migration:create": "npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
-    "migration:revert": "npm run typeorm -- -d ./typeorm.config.ts migration:revert"
+    "migration:run": "npm run typeorm -- -d ./typeorm.config.ts migration:run",
+    "migration:generate": "npm run typeorm -- -d ./typeorm.config.ts migration:generate ./src/migrations/migration",
+    "migration:create": "npm run typeorm -- migration:create ./src/migrations/",
+    "migration:revert": "npm run typeorm -- -d ./typeorm.config.ts migration:revert "
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
