--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,16 @@
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: nest-app
-    restart: always
-    ports:
-      - "${PORT}:${PORT}"
-    depends_on:
-      - postgres
-    networks:
-      - app-be
+  # web:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #   container_name: nest-app
+  #   restart: always
+  #   ports:
+  #     - "${PORT}:${PORT}"
+  #   depends_on:
+  #     - postgres
+  #   networks:
+  #     - app-be
   postgres:
     image: postgres:15.12-alpine
     container_name: nestjs_postgres
@@ -20,7 +20,7 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
       POSTGRES_DB: ${DB_NAME}
     ports:
-      - "5432:5432"
+      - "${DB_PORT}:${DB_PORT}"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
