--- a/package.json
+++ b/package.json
@@ -19,21 +19,23 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "migration:run": "npm run typeorm -- -d ./typeorm.config.ts migration:run",
-    "migration:generate": "npm run typeorm -- -d ./typeorm.config.ts migration:generate ./src/migrations/migration",
-    "migration:create": "npm run typeorm -- migration:create ./src/migrations/",
-    "migration:revert": "npm run typeorm -- -d ./typeorm.config.ts migration:revert "
+    "migration:run": "npm run typeorm migration:run -- -d typeorm.config.ts",
+    "migration:generate": "cross-env-shell npm run typeorm -- -d typeorm.config.ts migration:generate ./src/migrations/$npm_config_name",
+    "migration:create": "cross-env-shell npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
+    "migration:revert": "npm run typeorm -- -d typeorm.config.ts migration:revert"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "multer": "^1.4.5-lts.1",
-    "pg": "^8.14.0",
+    "pg": "^8.15.6",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.21"
